# youtube-english-dubbing

./: .env.example  .gitignore  README.md  colab_backend.ipynb  pyproject.toml  start-frontend.bat
backend/: .env.example  app.py  gpu_pool.py  metrics.py  pipeline.py  requirements.txt
scripts/: create_test_video.py  download_sample.py  extract_audio.py
src/: app.py  cli.py
src/config/: settings.py
src/dubbing/: aligner.py  mixer.py
src/io/: files.py  youtube.py
src/models/: types.py
src/mt/: translator.py
src/stt/: __init__.py  transcriber.py
src/subtitles/: srt.py  webvtt.py
src/tts/: synthesizer.py  voice_profile.py
src/utils/: audio.py  logging.py  timecodes.py  video.py
src/youtube_dubbing/: cli.py
src/youtube_dubbing/dubbing/: pipeline.py  pipeline_enhanced.py  pipeline_v2.py
src/youtube_dubbing/subtitles/: srt.py
tests/: test_pipeline.py  test_subtitles.py
web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/batch/: page.tsx
web/src/components/: BatchItemCard.tsx  Header.tsx  LanguageSelector.tsx  ProgressPipeline.tsx  SavedLinks.tsx  SettingsPanel.tsx  TranscriptViewer.tsx  VideoPlayer.tsx  VoiceSelector.tsx
web/src/hooks/: useVoices.ts
web/src/lib/: api.ts  utils.ts
work/: transcript_en.srt
